fix user statuses and add reconnect for websocket and  env vars
